--- a/farma-FX-app/pom.xml
+++ b/farma-FX-app/pom.xml
@@ -4,12 +4,28 @@
   <artifactId>farma-FX-app</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <distributionManagement>
+        <repository>
+            <id>internal</id>
+            <url>http://localhost:8080/repository/internal</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>http://localhost:8080/repository/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+  
   <dependencies>
 
 		<dependency>
 			<groupId>br.com.datarey</groupId>
 			<artifactId>infrastructure</artifactId>
-			<version>0.0.2</version>
+			<version>0.0.3</version>
 			<scope>compile</scope>
 		</dependency>
 
